--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ h1, h2, h3, h4, h5, h6, [class*="css"] {
     text-align: center; /* Center-align the text (optional) */
 }
 
-.stElementContainer.element-container.st-emotion-cache-o0r03.e1f1d6gn4 .stButtonGroup, .st-key-contai .stButtonGroup, .st-key-pipehome .stButton, .st-key-tableau-block{
+.stElementContainer.element-container.st-emotion-cache-o0r03.e1f1d6gn4 .stButtonGroup, .st-key-contai .stButtonGroup, .st-key-pipehome .stButton, .st-key-tableau-block, .st-key-home-selects .stButtonGroup{
     justify-content: center;
     justify-items: center;
     align-items: center; 
